# PWG

./: CMakeLists.txt  Concept.txt  README.md  TODO.txt  TO_DO.txt  Useful links.txt  build.bat  build.sh  buildEXE.bat
assets/configs/: imgui.ini
assets/shaders/: FastNoiseLite.glsl  Shaders concept.txt  Terrain shaders.txt  default.frag  default.vert  noise.comp
assets/shaders/common/: lighting.glsl  pbr.glsl
assets/shaders/skybox/: skybox.frag  skybox.vert
assets/shaders/terrainShaders/: FastNoiseLite.glsl  terrain.frag  terrain.vert  terrain_height.comp  terrain_normal.comp  terrain_splat.comp
assets/shaders/terrainShaders/masks/: elevationMask.comp  finalHeight.comp  finalMask.comp  mountainHeight.comp  mountainMask.comp  normalMask.comp  slopeMask.comp
assets/shaders/unlit/: unlit.frag  unlit.vert
assets/textures/skybox/: miramar_up.tga
docs/: Chunk management.docx  Concept.txt  File tree.txt  Masks terrain generation.docx  Prototype.txt  TO_DO.txt  Useful links.txt  Winter Holy To Do List.txt
libs/glad/include/: glad.h
libs/glad/src/: glad.c
src/: Application.cpp  Application.h  main.cpp  window.h
src/core/: Application.cpp  Application.h  window.cpp
src/core/Renderer/: renderer.cpp  renderer.h
src/core/application/: Application.cpp  Application.h
src/core/ecs/: entity.h  entity.inl
src/core/editor/: editor.cpp  editor.h  ieditor.h
src/core/editor/window_editor/: window_editor.cpp  window_editor.h
src/core/gui/: gui.cpp  gui.h
src/core/input/: inputManager.h  keyboardInput.cpp  keyboardInput.h  mouseInput.cpp  mouseInput.h
src/core/logger/: concept.txt  logger.cpp  logger.h
src/core/noise/: noise.cpp  noise.h
src/core/window/: window.cpp  window.h
src/ecs/: registry.h
src/ecs/components/: cameraComponent.h
src/editor/editorCamera/: editorCamera.cpp  editorCamera.h
src/graphics/: indexBuffer.cpp  indexBuffer.h  mesh.cpp  mesh.h  shader.cpp  shader.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h
src/graphics/buffer/: frameBuffer.cpp  frameBuffer.h  indexBuffer.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h
src/graphics/camera/: camera.cpp  camera.h  icamera.h
src/graphics/common/: GL_Types.h  GL_Types.inl  transform.h
src/graphics/framebuffer/: frameBuffer.cpp  frameBuffer.h
src/graphics/material/: material.cpp  material.h  materialManager.cpp  materialManager.h
src/graphics/mesh/: imesh.h  mesh.cpp  mesh.h  meshManager.cpp  meshManager.h  pyramidMesh.cpp  pyramidMesh.h  triangleMesh.cpp  triangleMesh.h
src/graphics/renderer/: irenderable.h  lightingUploader.cpp  lightingUploader.h  renderer.cpp  renderer.h
src/graphics/scene/: scene.cpp  scene.h
src/graphics/shader/: Compute shader concept.txt  computeShader.cpp  computeShader.h  ishader.h  shader.cpp  shader.h  shaderManager.cpp  shaderManager.h
src/graphics/texture/: cubeMapTexture.cpp  cubeMapTexture.h  texture.cpp  texture.h  textureArray.cpp  textureArray.h  textureManager.cpp  textureManager.h
src/procedural/: noiseDeformer.cpp  noiseDeformer.h  noiseTexture.cpp  noiseTexture.h
src/resources/: resourceManager.cpp  resourceManager.h
src/scene/: editorScene.cpp  editorScene.h  iscene.h  playScene.cpp  playScene.h  sceneManager.cpp  sceneManager.h
src/scene/cameras/: Camera concept.txt  cameraManager.cpp  cameraManager.h  editorCamera.cpp  editorCamera.h  icamera.h  playerCamera.cpp  playerCamera.h
src/scene/components/: cameraComponent.h  editorCameraComponent.h  meshComponent.h  planeMeshComponent.h  tagComponent.h  transformComponent.h
src/scene/controls/: lightControls.h  noiseControls.h  terrainLayerControls.h
src/scene/lights/: Light concept.txt  light.h
src/scene/objects/: sunObject.cpp  sunObject.h
src/scene/skybox/: skybox.cpp  skybox.h
src/scene/systems/: editorCameraControllerSystem.cpp  editorCameraControllerSystem.h  planeMeshSystem.cpp  planeMeshSystem.h
src/terrain/: Chunk man].txt  Concept.txt  Plan.txt  terrain.cpp  terrain.h  terrainGenerator.cpp  terrainGenerator.h  terrainLayer.h  terrainLayersManager.cpp  terrainLayersManager.h
src/terrain/chunk/: chunkManager.cpp  chunkManager.h  terrainChunk.h
src/terrain/config/: terrainSettings.h
src/terrain/debug/: terrainDebug.cpp  terrainDebug.h  terrainDebug.txt
src/terrain/gpu/: terrainComputePipeline.cpp  terrainComputePipeline.h
src/terrain/graph/: terrainGraph.cpp  terrainGraph.h  terrainPassContext.h
src/terrain/graph/passes/: elevationPass.cpp  elevationPass.h  finalHeightPass.cpp  finalHeightPass.h  finalMaskPass.cpp  finalMaskPass.h  mountainHeightPass.cpp  mountainHeightPass.h  mountainMaskPass.cpp  mountainMaskPass.h  normalMaskPass.cpp  normalMaskPass.h  slopeMaskPass.cpp  slopeMaskPass.h  terrainPass.h
src/terrain/lod/: LODDistances.h  LODManager.cpp  LODManager.h
src/terrain/masks/: mask.h
